  08 Mar 2018; Manuel Friedli <manuel@fritteli.ch>
  -files/0001-fix-Makefile-0.4.0.patch, -gitlab-pages-0.4.0.ebuild,
  -gitlab-pages-0.4.1.ebuild, -gitlab-pages-0.4.2-r1.ebuild,
  -gitlab-pages-0.4.4.ebuild:
  www-servers/gitlab-pages:  Purge obsolete versions of gitlab-pages

  09 Feb 2018; Manuel Friedli <manuel@fritteli.ch>
  -files/0001-fix-Makefile-0.6.0.patch, -gitlab-pages-0.6.0.ebuild.bak,
  gitlab-pages-0.4.0.ebuild, gitlab-pages-0.4.1.ebuild,
  gitlab-pages-0.4.2-r1.ebuild, gitlab-pages-0.4.4.ebuild,
  gitlab-pages-0.5.1.ebuild, gitlab-pages-0.6.0.ebuild:
  www-servers/gitlab-pages:  Add working ebuild for version 0.6.0. Finally!

  17 Sep 2017; Manuel Friedli <manuel@fritteli.ch> -gitlab-pages-0.5.0.ebuild:
  www-servers/gitlab-pages:  Prune unneeded ebuild.

*gitlab-pages-0.5.1 (08 Sep 2017)

  08 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-pages-0.5.1.ebuild:
  www-servers/gitlab-pages:  Add version 0.5.1, dependency of gitlab-ce-9.4.6.

*gitlab-pages-0.4.4 (08 Sep 2017)

  08 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-pages-0.4.4.ebuild,
  -gitlab-pages-0.4.3.ebuild:
  www-servers/gitlab-pages:  Add version 0.4.4, dependency of gitlab-ce-9.3.11.

*gitlab-pages-0.5.0 (09 Jul 2017)

  09 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-pages-0.5.0.ebuild:
  www-servers/gitlab-pages:  Add ebuild for gitlab-pages-0.5.0

  09 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
  -gitlab-pages-0.3.2-r1.ebuild:
  www-servers/gitlab-pages:  Purge obsolete versions

*gitlab-pages-0.4.3 (17 Jun 2017)

  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-pages-0.4.3.ebuild:
  www-servers/gitlab-pages:  Add version 0.4.3

*gitlab-pages-0.4.0 (13 Mar 2017)

  13 Mar 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/0001-fix-Makefile-0.4.0.patch, +gitlab-pages-0.4.0.ebuild:
  www-servers/gitlab-pages:   added ebuild for gitlab-pages-0.4.0

*gitlab-pages-0.3.2-r1 (13 Mar 2017)

  13 Mar 2017; Manuel Friedli <manuel@fritteli.ch>