@@ -3,7 +3,9 @@ AUX gitlab-pages-0.3.2.conf 148 SHA256 2b1d40d38d729a4e705455a2fbe745618c573cdc7
 AUX gitlab-pages-0.3.2.init 698 SHA256 6751226148f5c8b53bdf3422053115ed6bb6ac3d7795b605617a7733a2b84437 SHA512 10e299febee0a66f03e8debe3f20ad635b52b5238a2ad23f585d30f14d5c0f591825bd892119f564f427e93a539184e39424c8cdc78200b2dbb5d0f588738176 WHIRLPOOL 7142b6a056a0d0a90bb18d1fdc5995c07156e05216b9e5779548427ad6f7aed4cf8eb090acfcbd0a7cc07826c0b6dfc5276ca176a80783d40405d2011a253fe0
 DIST gitlab-pages-0.5.1.tar.bz2 224270 SHA256 b61ed9c12baf197dfd466342301ccb3160fbfe8fe61270a31a72e5503504f50b SHA512 973615efb54290c0d6b41455d91bf6343d8b09687565b8ad5e72cd69faea99cc3819c3aabea9e7cb94414a61835104e052affb1072ed62b1e2f343517eb94184 WHIRLPOOL 421500d5f0cee352a95dd59e9b799a9b3fd6b7639c656bd54fa601e061ddaa5062fa0b6a567bfce2543dcf9755b824a81362171c779db2f3f238faf760a6c472
 DIST gitlab-pages-0.6.0.tar.bz2 237765 SHA256 2bd99b5c4a1ad05ac02f17f5b450c308d1ef5936ff2e44be706705df8376c41b SHA512 935572062268c8a8429634377e02060f55feb2dfbd6b16e4487c1c4043dff435c304798dd2097f381f1c2e175c21d840e2dee76851dc9e03eeaa49d2b003900d WHIRLPOOL 01541d143a9511911cdd7c0c97d63cc48c682b19392c96ae429d98eeba6aba220e811d4da6826da2d417439202a33fc7a0deb16a9dda8a5a65f0e6b0fa9adf54
+DIST gitlab-pages-0.6.1.tar.bz2 238746 SHA256 267a9165470dc820363c61eb20170838c1916b1a7a0b31b6fdf018532db26f64 SHA512 3c93772b7d0b2ff76eae911adf4341492b803deb768eaf82fc03626154892392bd21456c3bbfde54885948ecc290dff5d5e828efcfc0d385aa0160cffcb67013 WHIRLPOOL d841e1bd1952fa4ff852201169c636eb83282b2559a57f9d1405e022aba5cbd124b196757c8afe4ce718353657474eede757181c29ae2769e5278e1af737850e
 EBUILD gitlab-pages-0.5.1.ebuild 1429 SHA256 be42145727bdc839161d6ac74bde5f59f7b69d2c204988e328d6ad2f02ee8704 SHA512 a585ab78624455480bd11ae599bc299a27e99b905b5fd686d71c0c06c157b937e63a46235fdbca758e47a938612b202d1887ef8749c5bd7c3abcf2fa5f48dfee WHIRLPOOL 57d1ace304dc994b27eb1d550885de5356cb2ce07e1d80c7a3c4f1c425115e59bce9220470e8ad9808b1f38d7bcd028ddd43dd04424f8556355417c81ec78a00
 EBUILD gitlab-pages-0.6.0.ebuild 1800 SHA256 7522d58e9b03a923f2e39cd6607c978485fcf3bd5d031f22c5c1831ffa81bb4f SHA512 487381485e2a9cecd8c7dc7a553ab5d107a49db9c77cd0c3d77c97c8e65f43207e6e5fe853959fed2df085a9047ee55b0ea332b8e507338b6ab44004bc7173db WHIRLPOOL efb8a378df194d37b6e59663b488aaa1608b7650489b160d59e98eada7e9f5328287f99843db7e2ebbfeaceaf2ebffc0863ffae915cc8c8f5b7e0a6a66a7206c
-MISC ChangeLog 2878 SHA256 a9702b37131976df434b05fb34317450259bda7176c6cc2ab0ed9b8636b9e02d SHA512 fb41ca3d459f99a750095158cc6c3ee4f4209dd153c0febc35b7b2be860b5add62226d541a9d87f9b1adb834f5f5c1d70e14256fcdbcf2c1cb67d81c072360da WHIRLPOOL a00b2eacfcb4aa3ed20a84b29d62d7b4dd83aa5d5a879f30c0a5cc4a8dfea556e4b8e33a9ccd8aad3efa9d00bc68dc12fd03aafe7fe5993c2ef6646739f04666
+EBUILD gitlab-pages-0.6.1.ebuild 1800 SHA256 924a7c16182db2151a4ed0886a913117ff0c4609a789c4c7e67775d0d89aa2ac SHA512 33092b419793513ac046bc5c154c934ce50a557fa8373b7c84b04431c8eb02545d45dd9caae6ec39304e9b5db714c646c04ec9979fc36d3e4393f20b984dd5dd WHIRLPOOL c8dee5cdb5ed42ee34c5a13be374b26dcb979bd7fed850789d99735034cc5d734fc0b67ac7c791c04d9e68c7476690b0f7a869c42914d6e0cbd59085290dbe2b
+MISC ChangeLog 3086 SHA256 d75860c7b670a98ba601d44adaf414e622ced8649d3370e3d7b449d2ea93153f SHA512 cd1a1202a53f2a693ea9c7015230677de6f8125d850fed500605aad13f39c6b37d7a6491e0b9eddc8ca95e507ecd87567a4811e0018a95302c523c9979789550 WHIRLPOOL 7b9b166afb8c307c3a50d4b042eb47187d916b32db45d4858c7c8fc4534ead433de31dcdda4119d9fc292434f1fe5abbdc3ad3851c106be1450896393e142374
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
