@@ -1,3 +1,9 @@
+*gitlab-pages-0.6.1 (09 Mar 2018)
+
+  09 Mar 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-pages-0.6.1.ebuild:
+  www-servers/gitlab-pages:  Add ebuild for version 0.6.1, dependency of gitlab-
+  ce-10.4.5
+
   08 Mar 2018; Manuel Friedli <manuel@fritteli.ch>
   -files/0001-fix-Makefile-0.4.0.patch, -gitlab-pages-0.4.0.ebuild,
   -gitlab-pages-0.4.1.ebuild, -gitlab-pages-0.4.2-r1.ebuild,
